@@ -9,7 +9,6 @@ package no.ndla.taxonomy.service;
 
 import no.ndla.taxonomy.domain.*;
 import no.ndla.taxonomy.repositories.*;
-import no.ndla.taxonomy.service.exceptions.EntityNotFoundException;
 import no.ndla.taxonomy.service.exceptions.NotFoundServiceException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -29,16 +28,14 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
     private final NodeConnectionRepository nodeConnectionRepository;
     private final ResourceTypeRepository resourceTypeRepository;
     private final CachedUrlUpdaterService cachedUrlUpdaterService;
-    private final CustomFieldService customFieldService;
 
     public DomainEntityHelperServiceImpl(NodeRepository nodeRepository,
             NodeConnectionRepository nodeConnectionRepository, ResourceTypeRepository resourceTypeRepository,
-            CachedUrlUpdaterService cachedUrlUpdaterService, CustomFieldService customFieldService) {
+            CachedUrlUpdaterService cachedUrlUpdaterService) {
         this.nodeRepository = nodeRepository;
         this.nodeConnectionRepository = nodeConnectionRepository;
         this.resourceTypeRepository = resourceTypeRepository;
         this.cachedUrlUpdaterService = cachedUrlUpdaterService;
-        this.customFieldService = customFieldService;
     }
 
     @Override
@@ -56,7 +53,7 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
         case "topic":
         case "node":
         case "resource":
-            return nodeRepository.findFirstByPublicIdIncludingCachedUrlsAndTranslations(publicId).orElse(null);
+            return nodeRepository.findFirstByPublicId(publicId).orElse(null);
         case "node-connection":
         case "subject-topic":
         case "topic-subtopic":
@@ -103,22 +100,16 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
         if (entity != null) {
             initializeFields(entity);
         }
-        if (entity instanceof EntityWithMetadata) {
-            EntityWithMetadata entityWithMetadata = (EntityWithMetadata) entity;
+        if (entity instanceof EntityWithMetadata entityWithMetadata) {
             if (addIsPublishing && !cleanUp) {
-                if (!entityWithMetadata.getMetadata().getCustomFieldValues().stream()
-                        .map(customFieldValue -> customFieldValue.getCustomField().getKey())
-                        .collect(Collectors.toList()).contains(CustomField.IS_PUBLISHING)) {
-                    customFieldService.setCustomField(entityWithMetadata.getMetadata(), CustomField.IS_PUBLISHING,
-                            "true");
-                }
+                // TODO: Her var det en rar ifstatement, trenger man den?
+                entityWithMetadata.setCustomField(CustomField.IS_PUBLISHING, "true");
                 return Optional.of(entity);
             }
             if (cleanUp) {
-                Metadata metadata = entityWithMetadata.getMetadata();
-                unsetCustomField(metadata, CustomField.IS_PUBLISHING);
-                unsetCustomField(metadata, CustomField.REQUEST_PUBLISH);
-                unsetCustomField(metadata, CustomField.IS_CHANGED);
+                entityWithMetadata.unsetCustomField(CustomField.IS_PUBLISHING);
+                entityWithMetadata.unsetCustomField(CustomField.REQUEST_PUBLISH);
+                entityWithMetadata.unsetCustomField(CustomField.IS_CHANGED);
             }
         }
         return Optional.ofNullable(entity);
@@ -126,7 +117,7 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
 
     private void initializeFields(DomainEntity domainEntity) {
         if (domainEntity instanceof Node) {
-            ((Node) domainEntity).getTranslations().forEach(NodeTranslation::getName);
+            ((Node) domainEntity).getTranslations().forEach(JsonTranslation::getName);
             ((Node) domainEntity).getChildConnections();
             ((Node) domainEntity).getParentConnections();
             ((Node) domainEntity).getResourceResourceTypes();
@@ -137,20 +128,8 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
             ((NodeConnection) domainEntity).getChild().ifPresent(this::initializeFields);
         } else if (domainEntity instanceof ResourceType) {
             ((ResourceType) domainEntity).getParent().ifPresent(this::initializeFields);
-            ((ResourceType) domainEntity).getTranslations().forEach(ResourceTypeTranslation::getName);
+            ((ResourceType) domainEntity).getTranslations().forEach(JsonTranslation::getName);
         }
-    }
-
-    private void unsetCustomField(Metadata metadata, String customfield) {
-        metadata.getCustomFieldValues().forEach(customFieldValue -> {
-            if (customFieldValue.getCustomField().getKey().equals(customfield)) {
-                try {
-                    customFieldService.unsetCustomField(customFieldValue.getId());
-                } catch (EntityNotFoundException e) {
-                    // Already deleted. Do nothing.
-                }
-            }
-        });
     }
 
     @Override
@@ -222,22 +201,22 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
             }
 
             // Translations
-            Set<NodeTranslation> translations = new HashSet<>();
-            for (NodeTranslation nodeTranslation : node.getTranslations()) {
-                Optional<NodeTranslation> existingTranslation = existing.getTranslations().stream()
+            Set<JsonTranslation> translations = new HashSet<>();
+            for (JsonTranslation nodeTranslation : node.getTranslations()) {
+                var existingTranslation = existing.getTranslations().stream()
                         .filter(translation -> translation.getLanguageCode().equals(nodeTranslation.getLanguageCode()))
                         .findFirst();
                 if (existingTranslation.isPresent()) {
-                    NodeTranslation tr = existingTranslation.get();
+                    var tr = existingTranslation.get();
                     tr.setName(nodeTranslation.getName());
                     translations.add(tr);
                 } else {
-                    translations.add(new NodeTranslation(nodeTranslation, existing));
+                    translations.add(new JsonTranslation(nodeTranslation));
                 }
             }
             if (!translations.isEmpty()) {
                 existing.clearTranslations();
-                for (NodeTranslation translation : translations) {
+                for (var translation : translations) {
                     existing.addTranslation(translation);
                 }
             }
@@ -319,12 +298,6 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
     }
 
     protected void mergeMetadata(EntityWithMetadata present, Metadata metadata, URI publicId, boolean cleanUp) {
-        if (present == null) {
-            // Make sure custom fields exists
-            metadata.getCustomFieldValues().forEach(customFieldValue -> customFieldService.setCustomField(null,
-                    customFieldValue.getCustomField().getKey(), null));
-            return;
-        }
         Metadata presentMetadata = present.getMetadata();
         if (presentMetadata.equals(metadata)) {
             // All ok, do nothing
@@ -332,36 +305,26 @@ public class DomainEntityHelperServiceImpl implements DomainEntityHelperService 
         }
 
         presentMetadata.setVisible(metadata.isVisible());
-        for (GrepCode grepCode : metadata.getGrepCodes()) {
-            if (!presentMetadata.getGrepCodes().stream().map(GrepCode::getCode).collect(Collectors.toList())
-                    .contains(grepCode.getCode())) {
-                presentMetadata.addGrepCode(new GrepCode(grepCode, presentMetadata));
+        for (var grepCode : metadata.getGrepCodes()) {
+            if (!presentMetadata.getGrepCodes().stream().map(JsonGrepCode::code).toList().contains(grepCode.code())) {
+                presentMetadata.addGrepCode(new JsonGrepCode(grepCode));
             }
         }
         if (!cleanUp) {
-            List<String> existingKeys = presentMetadata.getCustomFieldValues().stream()
-                    .map(customFieldValue1 -> customFieldValue1.getCustomField().getKey()).collect(Collectors.toList());
-            metadata.getCustomFieldValues().forEach(customFieldValue -> {
-                String key = customFieldValue.getCustomField().getKey();
+            metadata.getCustomFields().forEach((key, value) -> {
                 if (!List.of(CustomField.IS_PUBLISHING, CustomField.IS_CHANGED, CustomField.REQUEST_PUBLISH)
                         .contains(key)) {
-                    if (!existingKeys.contains(key)) {
-                        customFieldService.setCustomField(presentMetadata, key, customFieldValue.getValue());
-                    } else {
-                        // Update customfield
-                        Optional<CustomFieldValue> value = presentMetadata.getCustomFieldValueByKey(key);
-                        value.ifPresent(fieldValue -> fieldValue.setValue(customFieldValue.getValue()));
-                    }
+                    present.setCustomField(key, value);
                 }
             });
         } else {
             logger.debug("Cleaning metadata in updater");
-            presentMetadata.getCustomFieldValues().forEach(customFieldValue -> {
-                String key = customFieldValue.getCustomField().getKey();
+            presentMetadata.getCustomFields().entrySet().forEach(customFieldValue -> {
+                var key = customFieldValue.getKey();
                 // Remove specially handled fields
                 if (Arrays.asList(CustomField.IS_PUBLISHING, CustomField.IS_CHANGED, CustomField.REQUEST_PUBLISH)
                         .contains(key)) {
-                    presentMetadata.removeCustomFieldValue(customFieldValue);
+                    present.unsetCustomField(customFieldValue.getKey());
                     if (key.equals(CustomField.IS_PUBLISHING)) {
                         logger.info(String.format("Publishing of node %s finished", publicId));
                     }
